fixed contrast issues with .text-muted and .badge, tweaked .badge

--- a/src/bootstrap-wrapper/ng-gov-uk/variables.less
+++ b/src/bootstrap-wrapper/ng-gov-uk/variables.less
@@ -806,7 +806,7 @@
 @badge-color:                 #fff;
 //** Linked badge text color on hover
 @badge-link-hover-color:      #fff;
-@badge-bg:                    @gray-light;
+@badge-bg:                    @gray-dark;
 
 //** Badge text color in active nav link
 @badge-active-color:          @link-color;
@@ -884,7 +884,7 @@
 //##
 
 //** Text muted color
-@text-muted:                  @gray-light;
+@text-muted:                  @gray-dark;
 //** Abbreviations and acronyms border color
 @abbr-border-color:           @gray-light;
 //** Headings small color
